# 2DConvolution_ECE260C

./: .gitignore  README.md  vectorAdd.cu
1-dimensional filter/: CMakeLists.txt
1-dimensional filter/include/: fir_gpu.h  main.h
1-dimensional filter/source/: fir_gpu.cu  main.cpp
2-dimensional Sobel edge filter/: CMakeLists.txt
2-dimensional Sobel edge filter/include/: filter.h
2-dimensional Sobel edge filter/source/: filter.cu  main.cpp
2-dimensional Sobel edge filter/source files/: filter.cu  main.cpp
2-dimensional blur filter/: CMakeLists.txt  README.md
2-dimensional blur filter/include/: filter.h
2-dimensional blur filter/include files/: filter.h
2-dimensional blur filter/source/: filter.cu  main.cpp
2-dimensional blur filter/source files/: main.cpp
simple add/: add.cpp  add.cu
